# acid-state-cbor

./: .gitmodules  ChangeLog.md  LICENSE  acid-state-cbor.cabal  cabal.project
.github/workflows/: haskell-ci.yml
benchmarks/: Streaming.hs
examples/: HelloCBOR.hs  MultipleBackends.hs
src/Data/Acid/: CBOR.hs
src/Data/Acid/CBOR/: Internal.hs
src/Data/Acid/CRC/: Incremental.hs
tests/: KeyValueStateMachine.hs  Main.hs  TestState.hs
tests/Data/Acid/Test/: StateMachine.hs
